# Danklas-API

./: .env.example  .gitignore  .pre-commit-config.yaml  .tflint.hcl  AVP_INTEGRATION.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_projet_audio.sh
.claude/: AUDIO_SETUP.md  settings.json
.claude/hooks/: on_input_request.sh
.claude/sounds/: bonk.aiff  success.aiff
.docs/: PRD.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  ecr-push.yml  guardrail-approval.yml  terraform-lint.yml
app/: __init__.py  guardrails.py  main.py  main_simplified.py  rate_limiting.py  tracing.py
app/auth/: jwt.py
app/config/: settings.py
app/middleware/: auth.py  logging.py
app/routes/: knowledge_bases.py
docs/: User_Stories.md
lambda/authorizer/: lambda_function.py  requirements.txt
scripts/: terraform-check.sh
terraform/: .terraform.lock.hcl  README.md  alb.tf  api-gateway-authorizer-iam.tf  api-gateway.tf  ecr.tf  ecs.tf  iam.tf  lambda-authorizer.tf  locals.tf  main.tf  multi-region.tf  outputs.tf  ssm.tf  variables.tf  versions.tf  vpc-connectivity.tf  vpc.tf  waf.tf
terraform/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
terraform/environments/prod/: main.tf  terraform.tfvars.example  variables.tf
tests/: test_query_endpoint.py
