[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "C4ptnh00k", email = "c4ptnh00k@pm.me"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
